--- a/Baitapvenha.html/test2.css
+++ b/Baitapvenha.html/test2.css
@@ -7,8 +7,9 @@
 .box{
     width: 800px;
     height: auto;
-    margin: 0 auto;
-    border: 1 solid black ;
+    margin: 5px auto;
+    background-color: #333;
+    display: flex;
 }
 
 .left{
@@ -134,3 +135,9 @@ p{
     height: 100%;
     background-color: black;
 }
+
+.fa-star:nth-child(1),.fa-star:nth-child(2),.fa-star:nth-child(3),.fa-star:nth-child(4),.fa-star:nth-child(5){
+    color: #333;   
+}
+
+
